# bogan

./: .env_template  .gitignore  LICENSE  README.md  changelog.md  create_admin.py  myhtml.html  pyproject.toml  wsgi.py
bogan/: __init__.py  config.py  config.yaml  events.yaml  main.py  main2.py  utils.py
bogan/aa_dev/: dict_conv.py  get_ranking.py  pandas_analysis.py  plotly_dev.py  scretch.py  sql_queries.py
bogan/aa_dev/dash_tut/: dash_routes.py  dash_tutorial.py
bogan/admin/: __init__.py
bogan/admin/templates/: admin_dashboard.html  admin_database.html  admin_events.html  admin_users.html
bogan/api/: get_data_from_bgg.py
bogan/auth/: __init__.py
bogan/auth/templates/: admin_dashboard.html  admin_database.html  admin_events.html  admin_users.html  login.html  signup.html
bogan/database/: models.py  update_database.py
bogan/db/: ask_bgg.py  config.py  create_database.py  create_db.py  get_data_from_bgg.py  models.py  query_ops.py  tmp.xml  update_db.py  update_plays_in_db.py
bogan/dev/: gpt_create_database.py  my_sqlalchemy.py
bogan/lib/: calculation.py  dashboard.py  data_queries.py  dataframe.py  plotter.py  sql_request.py
bogan/main/: __init__.py
bogan/main/lib/: boardgame_ranking.py  event_analysis.py  fetch_db.py  filter_db.py  game_detail.py  pandas_analysis.py  player_stats.py
bogan/main/templates/: base.html  event.html  (+8 more)
bogan/static/: scripts.js  style.css
bogan/templates/: base copy.html  base.html  boardgame_detail.html  dash_template.html  df.html  index.html  index2.html  overview.html  ranking.html  scroll_table.html  user.html  user_detail.html
bogan/tools/: __init__.py
bogan/update_db/: create_database.py  models.py
gamechanger/: __init__.py
gamechanger/auth/: __init__.py  models.py
gamechanger/db/: ask_bgg.py  config.py  create_db.py  models.py  query_ops.py
gamechanger/main/: __init__.py
tests/: conftest.py  test_db_models.py  test_queries.py  test_update_db.py
tests/data/: create_100_test_data.py  create_random_data.py  data.txt  data_pytest.json  test_spiel.db  test_spiel2.db
(+22 files in other folders)
