[project]
name = "bogan"
version = "0.7.6"
description = "Website with tools and stats all around boardgames played and managed in BGG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "uvicorn>=0.35.0",
]

[tool.black]
line-length = 120

# needed to install the root dir with uv
[tool.uv]
package = true

[tool.setuptools]
packages = ["bogan"]